Allow icons to overflow to prevent getting cut off

--- a/app/assets/stylesheets/components/format.scss
+++ b/app/assets/stylesheets/components/format.scss
@@ -5,4 +5,5 @@
 
 .format-badge-group svg.format-icon {
     height: 1rem;
+    overflow: visible;
 }
